--- a/resources/views/Basket/Components/BasketPreview.twig
+++ b/resources/views/Basket/Components/BasketPreview.twig
@@ -32,7 +32,7 @@
                 <basket-totals template="#vue-basket-totals"></basket-totals>
 
                 <div class="basket-preview-footer row">
-                    <div class="col-xs-6 col-sm-6 mb-3">
+                    <div class="col-6 col-sm-6 mb-3">
                         <a v-waiting-animation-infinite
                         href="{{ urls.basket }}"
                         rel="nofollow"
@@ -44,7 +44,7 @@
                         </a>
                     </div>
 
-                    <div class="col-xs-6 col-sm-6">
+                    <div class="col-6 col-sm-6">
                         {{ LayoutContainer.show("Ceres::BasketPreview.BeforeCheckoutButton") }}
 
                         <div>
