--- a/resources/views/Basket/Components/BasketPreviewHover.twig
+++ b/resources/views/Basket/Components/BasketPreviewHover.twig
@@ -30,14 +30,14 @@
                     <basket-totals template="#vue-basket-totals"></basket-totals>
 
                     <div class="row">
-                        <div class="col-xs-6">
+                        <div class="col-6">
                             <a v-waiting-animation-infinite href="{{ urls.basket }}" rel="nofollow" class="btn btn-outline-primary btn-block basketBtn" title="{{ trans("Ceres::Template.basket") }}">
                                 <i class="fa fa-shopping-cart"></i>
                                 {{ trans("Ceres::Template.basket") }} 
                             </a>
                         </div>
 
-                        <div class="col-xs-6">
+                        <div class="col-6">
                             {{ LayoutContainer.show("Ceres::BasketPreview.BeforeCheckoutButton") }}
 
                             <div>
