--- a/resources/views/Category/Item/Partials/Pagination.twig
+++ b/resources/views/Category/Item/Partials/Pagination.twig
@@ -1,6 +1,6 @@
 <nav class="cmp cmp-paginator row float-right text-center">
     {% if pageMax > 1 %}
-        <ul class="pagination col-xs-12 m-y-0">
+        <ul class="pagination col-12 m-y-0">
 
             <!-- FIRST PAGE LINK -->
             {% if ceresConfig.pagination.showFirstPage and pageMax > 3 and currentPage > 2 %}
