--- a/resources/views/Containers/Components/LastSeenItemList.twig
+++ b/resources/views/Containers/Components/LastSeenItemList.twig
@@ -1,6 +1,6 @@
 <script type="x/template" id="vue-last-seen-item-list">
     <div v-if="items.length">
-        <div class="col-xs-12">
+        <div class="col-12">
             <slot name="heading"></slot>
         </div>
         <container-item-list :items="items" :items-per-page="itemsPerPage"></container-item-list>
