--- a/resources/views/Containers/Partials/ItemLists/ItemList.twig
+++ b/resources/views/Containers/Partials/ItemLists/ItemList.twig
@@ -24,7 +24,7 @@
             </div>
         </last-seen-item-list>
     {% elseif itemList is not empty %}
-        <div class="col-xs-12">
+        <div class="col-12">
             {% if not isHome %}
                 <hr>
             {% endif %}
