--- a/resources/views/Customer/Components/AddressInputGroup/AddressInputGroup.twig
+++ b/resources/views/Customer/Components/AddressInputGroup/AddressInputGroup.twig
@@ -20,7 +20,7 @@
             {% include "Ceres::Customer.Components.AddressInputGroup.Locale.DeliveryAddressInputGroupGB" %}
         </template>
         
-        <div class="col-xs-12 col-sm-4">
+        <div class="col-12 col-sm-4">
             <country-select
                 template="#vue-country-select"
                 :selected-country-id="value.countryId"
