--- a/resources/views/Customer/Components/ForgotPassword.twig
+++ b/resources/views/Customer/Components/ForgotPassword.twig
@@ -14,7 +14,7 @@
 							<span class="info-badge">{{ trans("Ceres::Template.loginForgotPasswordInfo") }}</span>
 						</div>
 						<div class="row">
-							<div class="col-xs-12">
+							<div class="col-12">
 								<div class="input-unit no-bottom" data-validate="mail">
 									{% set uid_mail = uid() %}
 									<input type="email" name="email" id="{{ uid_mail }}" v-model="username" data-autofocus>
