--- a/resources/views/Customer/Components/Registration.twig
+++ b/resources/views/Customer/Components/Registration.twig
@@ -40,7 +40,7 @@
                     </div>
                 </div>
 
-                <div class="col-xs-12">
+                <div class="col-12">
                     <address-input-group
                         template="#vue-address-input-group"
                         v-if="!isSimpleRegistration"
