--- a/resources/views/Item/Components/SingleItem.twig
+++ b/resources/views/Item/Components/SingleItem.twig
@@ -11,7 +11,7 @@
 
                 <div class="col-md-7 single-leftside">
                     <div class="row">
-                        <div class="col-xs-12">
+                        <div class="col-12">
                             <slot name="ImageCarousel"></slot>
                         </div>
                     </div>
