--- a/resources/views/ItemList/Partials/LoadingAnimation.twig
+++ b/resources/views/ItemList/Partials/LoadingAnimation.twig
@@ -1,4 +1,4 @@
-<div class="loading-animation-frame col-xs-12 col-lg-12">
+<div class="loading-animation-frame col-12 col-lg-12">
 
     {% if ceresConfig.item.loadingAnimationType == "bars" %}
         {% include "Ceres::ItemList.Partials.LoadingAnimationBars" %}
