--- a/resources/views/MyAccount/Components/ChangePaymentMethod.twig
+++ b/resources/views/MyAccount/Components/ChangePaymentMethod.twig
@@ -22,13 +22,13 @@
         <!-- CONFIRMATION  -->
         <div class="row top-spacer" v-if="currentTemplate == 'tpl.confirmation'">
 
-            <strong class="col-xs-6 col-sm-5">{{ trans("Ceres::Template.orderHistoryChangePayment") }}</strong>
+            <strong class="col-6 col-sm-5">{{ trans("Ceres::Template.orderHistoryChangePayment") }}</strong>
             <a v-if="changePossible" class="payment-link-style" @click="openPaymentChangeModal()">
                 <i class="fa fa-retweet" aria-hidden="true"></i>
                 <span>{{ trans("Ceres::Template.orderHistoryChangePaymentLink") }}</span>
             </a>
 
-            <div v-if="paymentStatus != 'fullyPaid'" class="col-xs-6 col-sm-7">
+            <div v-if="paymentStatus != 'fullyPaid'" class="col-6 col-sm-7">
                 <span v-if="!changePossible" class="payment-align-center">{{ trans("Ceres::Template.orderHistoryChangePaymentNotPossible") }}</span>
             </div>
 
