--- a/resources/views/MyAccount/MyAccount.twig
+++ b/resources/views/MyAccount/MyAccount.twig
@@ -36,7 +36,7 @@
                     {{ trans("Ceres::Template.myAccountLogout") }}
                 </a>
             </div>
-            <div class="col-xs-12">
+            <div class="col-12">
                 <hr class="">
             </div>
         </div>
