--- a/resources/views/PageDesign/Partials/PaginationTemplate.twig
+++ b/resources/views/PageDesign/Partials/PaginationTemplate.twig
@@ -1,5 +1,5 @@
 <nav class="cmp cmp-paginator row float-right text-center" v-if="{{ pageMax }} > 1">
-        <ul class="pagination col-xs-12 m-y-0">
+        <ul class="pagination col-12 m-y-0">
 
             <!-- FIRST PAGE LINK -->
             {% if config('Ceres.pagination.showFirstPage') == "true" %}
