--- a/resources/views/StaticPages/PageNotFound.twig
+++ b/resources/views/StaticPages/PageNotFound.twig
@@ -12,7 +12,7 @@
 
     <div class="container-max page-content page-not-found">
         <div class="row">
-            <div class="col-xs-12">
+            <div class="col-12">
                 <div class="jumbotron default-not-found">
                     <div class="row">
                         <div class="col-md-6">
