--- a/resources/views/Widgets/Common/LiveShoppingWidget.twig
+++ b/resources/views/Widgets/Common/LiveShoppingWidget.twig
@@ -4,7 +4,7 @@
 
 <div class="widget-live-shopping widget">
     <div class="row clearfix">
-        <div class="col-xs-12">
+        <div class="col-12">
             <live-shopping-item :live-shopping-id="{{ liveShoppingConfig.liveShoppingSelection }}" :display-settings="{{ liveShoppingConfig | json_encode }}">
                 {% if isPreview %}
                     <div class="live-shopping-placeholder">
