--- a/resources/views/Widgets/Header/TopBarWidget.twig
+++ b/resources/views/Widgets/Header/TopBarWidget.twig
@@ -169,7 +169,7 @@
                     <div class="container-max">
                         <div class="currency-select-inner row">
 
-                            <div class="currency-list col-xs-12">
+                            <div class="currency-list col-12">
                                 <div class="list-title">
                                     <strong>{{ Twig.print('trans("Ceres::Template.headerCurrency")') }}</strong>
                                     <hr>
