--- a/resources/scss/ceres/views/Home/_home.scss
+++ b/resources/scss/ceres/views/Home/_home.scss
@@ -18,7 +18,7 @@
 .home {
 
 	.product-list {
-		.col-xs-12 {
+		.col-12 {
 			margin: 0 15px;
 		}
 	}
@@ -138,7 +138,7 @@
 	}
 }
 .sale-new {
-	.col-xs-6 {
+	.col-6 {
 		.prop-inner {
 			padding: 15px 0;
 			left: 15px;
@@ -180,7 +180,7 @@
 	.home {
 		.product-list {
 			margin:0;
-			.col-xs-12 {
+			.col-12 {
 				margin: 0;
 			}
 		}
@@ -205,7 +205,7 @@
 		}
 	}
 	.sale-new {
-		.col-xs-6 {
+		.col-6 {
 			.prop-inner {
 				padding: 15px 7.5px 15px 15px;
 				left: 0;
