--- a/resources/views/Basket/Basket.twig
+++ b/resources/views/Basket/Basket.twig
@@ -15,7 +15,7 @@
     <div v-cloak class="page-content basket container-max" itemtype="http://schema.org/Product http://schema.org/Thing http://schema.org/Offer http://schema.org/PriceSpecification">
 
         <div class="row mt-3">
-            <div class="col-xs-12">
+            <div class="col-12">
                 <h1 class="h2">{{ trans("Ceres::Template.basket") }}</h1>
             </div>
         </div>
@@ -24,13 +24,13 @@
 
         <div class="row">
             <div class="col-md-7">
-                <div class="col-xs-12 pt-4 bg-white">
+                <div class="col-12 pt-4 bg-white">
                     <basket-list template="#vue-basket-list" size="large"></basket-list>
                 </div>
             </div>
 
             <div class="col-md-5">
-                <div class="col-xs-12 py-4 bg-white" v-stick-in-parent="$store.state.basket.isBasketInitiallyLoaded">
+                <div class="col-12 py-4 bg-white" v-stick-in-parent="$store.state.basket.isBasketInitiallyLoaded">
                     <hr class="d-md-none">
                     <basket-totals class="mb-4" template="#vue-basket-totals"></basket-totals>
 
