--- a/resources/views/Checkout/CheckoutView.twig
+++ b/resources/views/Checkout/CheckoutView.twig
@@ -24,7 +24,7 @@
         {% set overrideCheckout = LayoutContainer.show("Ceres::Checkout") %}
         {% if overrideCheckout|trim is empty %}
             <div class="row mt-3">
-                <div class="col-xs-12">
+                <div class="col-12">
                     <h1 class="h2">{{ trans("Ceres::Template.checkout") }}</h1>
                     <hr>
                 </div>
@@ -34,7 +34,7 @@
                 <div class="row" slot-scope="checkoutComp">
                     <!-- ADDRESS SELECT -->
                     <div class="col-md-7">
-                        <div class="col-xs-12 pt-4 pb-3 bg-white">
+                        <div class="col-12 pt-4 pb-3 bg-white">
                             <div id="registry-form-container" class="registry-form-container main-col" data-id="0" data-status="2">
                                 {% set overrideAddressLists = LayoutContainer.show("Ceres::Checkout.AddressLists") %}
                                 {% if overrideAddressLists|trim is empty %}
@@ -125,11 +125,11 @@
                     <!-- ./ADDRESS SELECT -->
 
                     <div class="col-md-5 checkout-rightside">
-                        <div class="col-xs-12 bg-white pt-4">
+                        <div class="col-12 bg-white pt-4">
                             <h3>{{ trans("Ceres::Template.checkoutBasket") }}</h3>
                             <hr class="mb-0">
                         </div>
-                        <div class="col-xs-12 pt-4 pb-3 bg-white">
+                        <div class="col-12 pt-4 pb-3 bg-white">
                             <aside class="sidebar">
                                 <div class="cmp cmp-checkout-sidebar">
                                     <div class="cmp cmp-basket-preview-list">
@@ -142,7 +142,7 @@
                             </aside>
                         </div>
 
-                        <div class="col-xs-12 py-3 bg-white" v-stick-in-parent="$store.state.basket.isBasketInitiallyLoaded">
+                        <div class="col-12 py-3 bg-white" v-stick-in-parent="$store.state.basket.isBasketInitiallyLoaded">
                             <aside class="sidebar">
                                 <div class="cmp cmp-checkout-sidebar">
                                     {{ LayoutContainer.show("Ceres::Checkout.BeforeBasketTotals") }}
