--- a/resources/views/Checkout/OrderConfirmation.twig
+++ b/resources/views/Checkout/OrderConfirmation.twig
@@ -17,7 +17,7 @@
     {% if overrideConfirmation|trim is empty %}
         <div class="page-content myaccount container-max mb-5 mt-3 pb-5">
             <div class="row mb-5">
-                <div class="col-xs-12">
+                <div class="col-12">
                     <h1 class="h2">{{ trans("Ceres::Template.orderConfirmationThanks") }}</h1>
                     <p>{{ trans("Ceres::Template.orderConfirmationWillBeProcessed") }}</p>
 
@@ -39,7 +39,7 @@
             {% endif %}
             <div class="row">
                 {% set loggedIn = frontend.Account.getIsAccountLoggedIn %}
-                <div class="col-xs-6 col-md-4 {% if loggedIn %}offset-md-2{% else %}offset-3 offset-md-4{% endif %}">
+                <div class="col-6 col-md-4 {% if loggedIn %}offset-md-2{% else %}offset-3 offset-md-4{% endif %}">
                     <a v-waiting-animation-infinite href="{{ homepageURL }}" type="" class="btn btn-primary btn-block bg-primary">
                         <i class="fa fa-home" aria-hidden="true"></i>
                         {{ trans("Ceres::Template.orderConfirmationHomepage") }}
@@ -48,7 +48,7 @@
 
 
                 {% if loggedIn %}
-                    <div class="col-xs-6 col-md-4">
+                    <div class="col-6 col-md-4">
                         <a v-waiting-animation-infinite href="{{ urls.myAccount }}" type="" class="btn btn-primary btn-block bg-primary">
                             <i class="fa fa-user" aria-hidden="true"></i>
                             {{ trans("Ceres::Template.orderConfirmationMyAccount") }}
