--- a/resources/views/Containers/Components/ContainerItemList.twig
+++ b/resources/views/Containers/Components/ContainerItemList.twig
@@ -4,7 +4,7 @@
 
 <script type="x/template" id="vue-container-item-list">
     <div class="row clearfix">
-        <div class="col-xs-12 col-lg-12" v-if="items.length > itemsPerPage">
+        <div class="col-12 col-lg-12" v-if="items.length > itemsPerPage">
             <div class="list-item-carousel owl-carousel owl-theme owl-single-item" ref="carouselContainer">
                 <category-item v-for="(item, index) in items" :ref="'categoryItem_' + index" :key="item.data.variation.id" :item-data="item.data" :decimal-count="{{ decimalCount | json_encode }}" image-url-accessor="urlMiddle"></category-item>
             </div>
