--- a/resources/views/Customer/Components/AddressInputGroup/Locale/BillingAddressInputGroupDE.twig
+++ b/resources/views/Customer/Components/AddressInputGroup/Locale/BillingAddressInputGroupDE.twig
@@ -3,10 +3,10 @@
 {% set addressFields = config("Ceres.billing_address.show") | split(', ') %}
 {% set addressFieldsRequired = config("Ceres.billing_address.require") | split(', ') %}
 
-<div class="col-xs-12">
+<div class="col-12">
     <div class="row">
         {% if "billing_address.salutation" in addressFields %}
-            <div class="col-xs-12 col-sm-4">
+            <div class="col-12 col-sm-4">
                 <div class="input-unit"
                     {% if "billing_address.salutation" in addressFieldsRequired %}data-validate{% endif %}>
                     <salutation-select template="#vue-salutation-select" :address-type="addressType" :address-data="value" @input="emitInputEvent($event.field, $event.value)"></salutation-select>
@@ -17,10 +17,10 @@
     </div>
 </div>
 
-<div class="col-xs-12">
+<div class="col-12">
     <div class="row">
         {% if "billing_address.name1" in addressFields %}
-            <div class="col-xs-12 col-sm-6" {% if "billing_address.salutation" in addressFields %}v-if="value.addressSalutation === 2"{% endif %}>
+            <div class="col-12 col-sm-6" {% if "billing_address.salutation" in addressFields %}v-if="value.addressSalutation === 2"{% endif %}>
                 <div class="input-unit"
                     {% if "billing_address.name1" in addressFieldsRequired %}data-validate="text" {% endif %}data-model="name1">
                     <input type="text" name="company" :id="'txtCompany' + _uid" :value="value.name1" @input="emitInputEvent('name1', $event.target.value)" data-autofocus>
@@ -30,7 +30,7 @@
         {% endif %}
 
         {% if "billing_address.vatNumber" in addressFields %}
-            <div class="col-xs-12 col-sm-6" {% if "billing_address.salutation" in addressFields %}v-if="value.addressSalutation === 2"{% endif %}>
+            <div class="col-12 col-sm-6" {% if "billing_address.salutation" in addressFields %}v-if="value.addressSalutation === 2"{% endif %}>
                 <div class="input-unit"
                      {% if "billing_address.vatNumber" in addressFieldsRequired %}data-validate="text" {% endif %}data-model="vatNumber">
                     <input type="text" name="vatNumber" :id="'txtVatNumber' + _uid" :value="value.vatNumber"  @input="emitInputEvent('vatNumber', $event.target.value)" data-autofocus>
@@ -41,11 +41,11 @@
     </div>
 </div>
 
-<div class="col-xs-12">
+<div class="col-12">
     <div class="row">
 
         {% if "billing_address.title" in addressFields %}
-            <div class="col-xs-12 col-sm-4">
+            <div class="col-12 col-sm-4">
                 <div class="input-unit"
                      {% if "billing_address.title" in addressFieldsRequired %}data-validate="text" {% endif %}data-model="title">
                     <input type="text" name="title" :id="'txtTitle' + _uid" :value="value.title"  @input="emitInputEvent('title', $event.target.value)" data-autofocus>
@@ -54,14 +54,14 @@
             </div>
         {% endif %}
 
-        <div class="col-xs-12 col-sm-4">
+        <div class="col-12 col-sm-4">
             <div class="input-unit" data-validate="text" data-model="name2">
                 <input type="text" name="firstName" :id="'txtFirstName' + _uid" :value="value.name2"  @input="emitInputEvent('name2', $event.target.value)" data-autofocus>
                 <label :for="'txtFirstName' + _uid">{{ trans("Ceres::Template.addressFirstName") }}*</label>
             </div>
         </div>
 
-        <div class="col-xs-12 col-sm-4">
+        <div class="col-12 col-sm-4">
             <div class="input-unit" data-validate="text" data-model="name3">
                 <input type="text" name="lastName" :id="'txtLastName' + _uid" :value="value.name3" @input="emitInputEvent('name3', $event.target.value)">
                 <label :for="'txtLastName' + _uid">{{ trans("Ceres::Template.addressLastName") }}*</label>
@@ -69,7 +69,7 @@
         </div>
 
         {% if "billing_address.name4" in addressFields %}
-            <div class="col-xs-12 col-sm-4">
+            <div class="col-12 col-sm-4">
                 <div class="input-unit"
                      {% if "billing_address.name4" in addressFieldsRequired %}data-validate="text" {% endif %} data-model="name4">
                     <input type="text" name="decorateName" :id="'txtAdditionalName' + _uid" :value="value.name4" @input="emitInputEvent('name4', $event.target.value)">
@@ -79,7 +79,7 @@
         {% endif %}
 
         {% if "billing_address.birthday" in addressFields %}
-            <div class="col-xs-12 col-sm-4">
+            <div class="col-12 col-sm-4">
                 <div class="input-unit" {% if "billing_address.birthday" in addressFieldsRequired %}data-validate="date" {% endif %} data-model="birthday">
                     <input type="date" min="1901-12-14" :max="new Date().toISOString().split('T')[0]" name="birthday" placeholder="{{ trans("Ceres::Template.addressBirthdatePlaceholder") }}" :id="'txtBirthdate' + _uid" :value="value.birthday" @input="emitInputEvent('birthday', $event.target.value)">
                     <label :for="'txtBirthdate' + _uid">{{ trans("Ceres::Template.addressBirthdate") }}{% if "billing_address.birthday" in addressFieldsRequired %}*{% endif %}</label>
@@ -88,7 +88,7 @@
         {% endif %}
 
         {% if "billing_address.phoneNumber" in addressFields %}
-            <div class="col-xs-12 col-sm-4">
+            <div class="col-12 col-sm-4">
                 <div class="input-unit"
                      {% if "billing_address.phoneNumber" in addressFieldsRequired %}data-validate="text" {% endif %}data-model="telephone">
                     <input type="text" name="telephone" :id="'txtTelephone' + _uid" :value="value.telephone" @input="emitInputEvent('telephone', $event.target.value)">
@@ -100,16 +100,16 @@
     </div>
 </div>
 
-<div class="col-xs-12">
+<div class="col-12">
     <div class="row">
-        <div class="col-xs-12 col-sm-8">
+        <div class="col-12 col-sm-8">
             <div class="input-unit" data-validate="text" data-model="address1">
                 <input type="text" name="street" autocomplete="address-line1" :id="'txtStreet' + _uid" :value="value.address1" @input="emitInputEvent('address1', $event.target.value)">
                 <label :for="'txtStreet' + _uid">{{ trans("Ceres::Template.addressStreet") }}*</label>
             </div>
         </div>
 
-        <div class="col-xs-12 col-sm-4">
+        <div class="col-12 col-sm-4">
             <div class="input-unit" data-validate="text" data-model="address2">
                 <input type="text" name="housenumber" autocomplete="address-line2" :id="'txtNumber' + _uid" :value="value.address2" @input="emitInputEvent('address2', $event.target.value)">
                 <label :for="'txtNumber' + _uid">{{ trans("Ceres::Template.addressNumber") }}*</label>
@@ -118,10 +118,10 @@
     </div>
 </div>
 
-<div class="col-xs-12">
+<div class="col-12">
     <div class="row">
         {% if "billing_address.address3" in addressFields %}
-            <div class="col-xs-12 col-sm-6">
+            <div class="col-12 col-sm-6">
                 <div class="input-unit"
                      {% if "billing_address.address3" in addressFieldsRequired %}data-validate="text" {% endif %}data-model="address3">
                     <input type="text" name="decorateAddress" :id="'decorateAddress0' + _uid" :value="value.address3" @input="emitInputEvent('address3', $event.target.value)">
@@ -131,7 +131,7 @@
         {% endif %}
 
         {% if "billing_address.address4" in addressFields %}
-            <div class="col-xs-12 col-sm-6">
+            <div class="col-12 col-sm-6">
                 <div class="input-unit"
                      {% if "billing_address.address4" in addressFieldsRequired %}data-validate="text" {% endif %}data-model="address4">
                     <input type="text" name="decorateAddress" :id="'decorateAddress1' + _uid" :value="value.address4" @input="emitInputEvent('address4', $event.target.value)">
@@ -142,14 +142,14 @@
     </div>
 </div>
 
-<div class="col-xs-12 col-sm-4">
+<div class="col-12 col-sm-4">
     <div class="input-unit" data-validate="text" data-model="postalCode">
         <input type="text" name="zip" :id="'txtZip' + _uid" :value="value.postalCode" @input="emitInputEvent('postalCode', $event.target.value)">
         <label :for="'txtZip' + _uid">{{ trans("Ceres::Template.addressZip") }}*</label>
     </div>
 </div>
 
-<div class="col-xs-12 col-sm-4">
+<div class="col-12 col-sm-4">
     <div class="input-unit" data-validate="text" data-model="town">
         <input type="text" name="town" :id="'txtPlace' + _uid" :value="value.town" @input="emitInputEvent('town', $event.target.value)">
         <label :for="'txtPlace' + _uid">{{ trans("Ceres::Template.addressPlace") }}*</label>
