--- a/resources/views/Customer/Components/AddressInputGroup/Locale/DeliveryAddressInputGroupDE.twig
+++ b/resources/views/Customer/Components/AddressInputGroup/Locale/DeliveryAddressInputGroupDE.twig
@@ -3,10 +3,10 @@
 {% set addressFields = config("Ceres.delivery_address.show") | split(', ') %}
 {% set addressFieldsRequired = config("Ceres.delivery_address.require") | split(', ') %}
 
-<div class="col-xs-12">
+<div class="col-12">
     <div class="row">
         {% if "delivery_address.salutation" in addressFields %}
-            <div class="col-xs-12 col-sm-4">
+            <div class="col-12 col-sm-4">
                 <div class="input-unit"
                 {% if "delivery_address.salutation" in addressFieldsRequired %}data-validate{% endif %}>
                     <salutation-select template="#vue-salutation-select" :address-type="addressType" :address-data="value" @input="emitInputEvent($event.field, $event.value)"></salutation-select>
@@ -17,10 +17,10 @@
     </div>
 </div>
 
-<div class="col-xs-12">
+<div class="col-12">
     <div class="row">
         {% if "delivery_address.name1" in addressFields %}
-            <div class="col-xs-12 col-sm-6" {% if "delivery_address.salutation" in addressFields %}v-if="value.addressSalutation === 2"{% endif %}>
+            <div class="col-12 col-sm-6" {% if "delivery_address.salutation" in addressFields %}v-if="value.addressSalutation === 2"{% endif %}>
                 <div class="input-unit"
                      {% if "delivery_address.name1" in addressFieldsRequired %}data-validate="text" {% endif %}data-model="name1">
                     <input type="text" name="company" :id="'txtCompany' + _uid" :value="value.name1" @input="emitInputEvent('name1', $event.target.value)" data-autofocus>
@@ -31,11 +31,11 @@
     </div>
 </div>
 
-<div class="col-xs-12">
+<div class="col-12">
     <div class="row">
 
         {% if "delivery_address.title" in addressFields %}
-            <div class="col-xs-12 col-sm-4">
+            <div class="col-12 col-sm-4">
                 <div class="input-unit"
                      {% if "delivery_address.title" in addressFieldsRequired %}data-validate="text" {% endif %}data-model="title">
                     <input type="text" name="title" :id="'txtTitle' + _uid" :value="value.title" @input="emitInputEvent('title', $event.target.value)" data-autofocus>
@@ -44,14 +44,14 @@
             </div>
         {% endif %}
 
-        <div class="col-xs-12 col-sm-4">
+        <div class="col-12 col-sm-4">
             <div class="input-unit" data-validate="text" data-model="name2">
                 <input type="text" name="firstName" :id="'txtFirstName' + _uid" :value="value.name2" @input="emitInputEvent('name2', $event.target.value)" data-autofocus>
                 <label :for="'txtFirstName' + _uid">{{ trans("Ceres::Template.addressFirstName") }}*</label>
             </div>
         </div>
 
-        <div class="col-xs-12 col-sm-4">
+        <div class="col-12 col-sm-4">
             <div class="input-unit" data-validate="text" data-model="name3">
                 <input type="text" name="lastName" :id="'txtLastName' + _uid" :value="value.name3" @input="emitInputEvent('name3', $event.target.value)">
                 <label :for="'txtLastName' + _uid">{{ trans("Ceres::Template.addressLastName") }}*</label>
@@ -59,7 +59,7 @@
         </div>
 
         {% if "delivery_address.name4" in addressFields %}
-            <div class="col-xs-12 col-sm-4">
+            <div class="col-12 col-sm-4">
                 <div class="input-unit"
                      {% if "delivery_address.name4" in addressFieldsRequired %}data-validate="text" {% endif %}data-model="name4">
                     <input type="text" name="decorateName" :id="'txtAdditionalName' + _uid" :value="value.name4" @input="emitInputEvent('name4', $event.target.value)">
@@ -69,7 +69,7 @@
         {% endif %}
 
         {% if "delivery_address.phoneNumber" in addressFields %}
-            <div class="col-xs-12 col-sm-4">
+            <div class="col-12 col-sm-4">
                 <div class="input-unit"
                      {% if "delivery_address.phoneNumber" in addressFieldsRequired %}data-validate="text" {% endif %}data-model="telephone">
                     <input type="text" name="telephone" :id="'txtTelephone' + _uid" :value="value.telephone" @input="emitInputEvent('telephone', $event.target.value)">
@@ -80,25 +80,25 @@
     </div>
 </div>
 
-<div class="col-xs-12" v-if="isParcelOrOfficeAvailable">
+<div class="col-12" v-if="isParcelOrOfficeAvailable">
     <div class="row">
-        <div class="col-xs-12">
+        <div class="col-12">
             <input type="checkbox" name="togglePickup" :checked="value.showPickupStation" @change="togglePickupStation($event.target.checked)" :id="'showPickup' + _uid">
             <label :for="'showPickup' + _uid">{{ trans("Ceres::Template.addressToPickupStation") }}</label>
         </div>
     </div>
 </div>
 
-<div class="col-xs-12">
+<div class="col-12">
     <div class="row">
-        <div class="col-xs-12 col-sm-8">
+        <div class="col-12 col-sm-8">
             <div class="input-unit" data-validate="text" data-model="address1">
                 <input type="text" name="street" autocomplete="address-line1" :id="'txtStreet' + _uid" :value="value.address1" @input="emitInputEvent('address1', $event.target.value)">
                 <label :for="'txtStreet' + _uid">{{ trans("Ceres::Template.addressStreet") }}*</label>
             </div>
         </div>
 
-        <div class="col-xs-12 col-sm-4">
+        <div class="col-12 col-sm-4">
             <div class="input-unit" data-validate="text" data-model="address2">
                 <input type="text" name="housenumber" autocomplete="address-line2" :id="'txtNumber' + _uid" :value="value.address2" @input="emitInputEvent('address2', $event.target.value)">
                 <label :for="'txtNumber' + _uid">{{ trans("Ceres::Template.addressNumber") }}*</label>
@@ -107,10 +107,10 @@
     </div>
 </div>
 
-<div class="col-xs-12">
+<div class="col-12">
     <div class="row">
         {% if "delivery_address.address3" in addressFields %}
-            <div class="col-xs-12 col-sm-6">
+            <div class="col-12 col-sm-6">
                 <div class="input-unit"
                      {% if "delivery_address.address3" in addressFieldsRequired %}data-validate="text" {% endif %}data-model="address3">
                     <input type="text" name="decorateAddress" :id="'decorateAddress0' + _uid"
@@ -121,7 +121,7 @@
         {% endif %}
 
         {% if "delivery_address.address4" in addressFields %}
-            <div class="col-xs-12 col-sm-6">
+            <div class="col-12 col-sm-6">
                 <div class="input-unit"
                      {% if "delivery_address.address4" in addressFieldsRequired %}data-validate="text" {% endif %}data-model="address4">
                     <input type="text" name="decorateAddress" :id="'decorateAddress1' + _uid"
@@ -133,14 +133,14 @@
     </div>
 </div>
 
-<div class="col-xs-12 col-sm-4">
+<div class="col-12 col-sm-4">
     <div class="input-unit" data-validate="text" data-model="postalCode">
         <input type="text" name="zip" :id="'txtZip' + _uid" :value="value.postalCode" @input="emitInputEvent('postalCode', $event.target.value)">
         <label :for="'txtZip' + _uid">{{ trans("Ceres::Template.addressZip") }}*</label>
     </div>
 </div>
 
-<div class="col-xs-12 col-sm-4">
+<div class="col-12 col-sm-4">
     <div class="input-unit" data-validate="text" data-model="town">
         <input type="text" name="town" :id="'txtPlace' + _uid" :value="value.town" @input="emitInputEvent('town', $event.target.value)">
         <label :for="'txtPlace' + _uid">{{ trans("Ceres::Template.addressPlace") }}*</label>
