--- a/resources/views/Customer/Components/Contact/ContactForm.twig
+++ b/resources/views/Customer/Components/Contact/ContactForm.twig
@@ -14,7 +14,7 @@
 
 	<div class="row cmp-contact">
 
-		<div class="col-xs-12">
+		<div class="col-12">
 			<h1>{{ trans("Ceres::Template.contact") }}</h1>
 
 			<hr>
@@ -26,27 +26,27 @@
 			<div class="row">
 
                 {% if contactConfigSet %}
-					<div class="col-xs-12 pb-5{% if googleApiKey %} col-md-6 pt-4{% else %} col-sm-12 col-md-4 col-lg-3{% endif %}">
+					<div class="col-12 pb-5{% if googleApiKey %} col-md-6 pt-4{% else %} col-sm-12 col-md-4 col-lg-3{% endif %}">
 					{% include "Ceres::Customer.Components.Contact.ContactCard" %}
 					</div>
                 {% endif %}
 
                 {% if googleApiKey and contactConfigSet %}
-					<div class="col-xs-12 col-md-6 pb-5 pt-4{% if showMapInMobile == "false" %} hidden-sm-down{% endif %}">
+					<div class="col-12 col-md-6 pb-5 pt-4{% if showMapInMobile == "false" %} hidden-sm-down{% endif %}">
 						<contact-map template="#vue-contact-map" zip="{{ zip }}" street="{{ street }}" map-zoom="{{ mapZoom }}" google-api-key="{{ googleApiKey }}"></contact-map>
 					</div>
                 {% endif %}
 
-				<div class="col-xs-12{% if contactConfigSet and not googleApiKey %} col-sm-12 col-md-8 col-lg-9{% endif %}">
+				<div class="col-12{% if contactConfigSet and not googleApiKey %} col-sm-12 col-md-8 col-lg-9{% endif %}">
 					<form id="contact-form" class="row">
 
-						<div class="col-xs-12 col-md-6 mb-3">
+						<div class="col-12 col-md-6 mb-3">
 							<div class="input-unit input-name-field">
 								<input type="name" name="name" v-model="name" id="txt_name">
 								<label for="txt_name">{{ trans("Ceres::Template.contactName") }} ({{ trans("Ceres::Template.contactOptional") }})</label>
 							</div>
 						</div>
-						<div class="col-xs-12 col-md-6 mb-3">
+						<div class="col-12 col-md-6 mb-3">
 							<div class="input-unit input-mail-field" data-validate="regex" data-model="userMail">
 								{% set uid_mail = uid() %}
 								<input type="email" name="email" v-model="userMail" id="{{ uid_mail }}" data-validate-ref="{{ mailRegex }}">
@@ -54,21 +54,21 @@
 							</div>
 							<div class="error-feedback">{{ trans("Ceres::Template.contactEnterConfirmEmail") }}</div>
 						</div>
-						<div class="col-xs-12 col-md-6 mb-3">
+						<div class="col-12 col-md-6 mb-3">
 							<div class="input-unit" data-validate="text" data-model="subject">
 								<input type="subject" name="subject" v-model="subject" id="txt_subject">
 								<label for="txt_subject">{{ trans("Ceres::Template.contactSubject") }}*</label>
 							</div>
 							<div class="error-feedback">{{ trans("Ceres::Template.contactEditSubject") }}</div>
 						</div>
-						<div class="col-xs-12 col-md-6 mb-3">
+						<div class="col-12 col-md-6 mb-3">
 							<div class="input-unit">
 								<input type="order" name="order" v-model="orderId" id="txt_order">
 								<label for="txt_order">{{ trans("Ceres::Template.contactOrderId") }} ({{ trans("Ceres::Template.contactOptional") }})</label>
 							</div>
 						</div>
 
-						<div class="col-xs-12">
+						<div class="col-12">
 							<div class="input-unit textarea" data-validate="text" data-model="message">
 								<textarea name="message" id="txt_message" v-model="message" class="no-resize" rows="15" cols="25"></textarea>
 								<label for="txt_message">{{ trans('Ceres::Template.contactMessage') }}*</label>
@@ -76,11 +76,11 @@
 							<div class="error-feedback">{{ trans("Ceres::Template.contactEditMessage") }}</div>
 						</div>
 
-						<div class="col-xs-12 text-sm-right">* {{ trans("Ceres::Template.contactRequiredField") }}</div>
+						<div class="col-12 text-sm-right">* {{ trans("Ceres::Template.contactRequiredField") }}</div>
 					</form>
 				</div>
 
-				<div class="col-xs-12 col-md-12 re-captcha-container">
+				<div class="col-12 col-md-12 re-captcha-container">
                     {% if gCapture | length > 0 %}
 						<div id="recaptcha" class="g-recaptcha"
 							 data-sitekey="{{ gCapture }}"
@@ -91,22 +91,22 @@
                     {% endif %}
 				</div>
 
-				<div class="col-xs-12 col-md-9">
+				<div class="col-12 col-md-9">
 					<label class="form-check-label custom-control">
 						<input class="form-check-input" type="checkbox" v-model="cc" value="cc" name="mailToMe">
 						{{ trans("Ceres::Template.contactSendMeACopy") }}
 					</label>
 				</div>
 
-				<div class="col-xs-12">
+				<div class="col-12">
 					<hr>
 				</div>
 
-				<div class="col-xs-12">
+				<div class="col-12">
 					<accept-privacy-policy-check class="mb-3" v-if="enableConfirmingPrivacyPolicy" v-model="privacyPolicyAccepted" @input="privacyPolicyValueChanged($event)" :show-error="privacyPolicyShowError"></accept-privacy-policy-check>
 				</div>
 
-				<div class="col-xs-12 col-md-3 offset-md-9 send-mail">
+				<div class="col-12 col-md-3 offset-md-9 send-mail">
 					<button type="submit" class="btn btn-primary btn-block" :disabled="waiting" @click="validate({{ gCapture | length > 0 }})">
 						<i v-waiting-animation="waiting" class="fa fa-paper-plane-o" aria-hidden="true"></i> 
 						{{ trans("Ceres::Template.contactSend") }}
@@ -114,7 +114,7 @@
 				</div>
 
                 {% if googleApiKey and not contactConfigSet %}
-					<div class="col-xs-12 mt-5{% if showMapInMobile == "false" %} hidden-sm-down{% endif %}">
+					<div class="col-12 mt-5{% if showMapInMobile == "false" %} hidden-sm-down{% endif %}">
 						<contact-map template="#vue-contact-map" zip="{{ zip }}" street="{{ street }}" map-zoom="{{ mapZoom }}" google-api-key="{{ googleApiKey }}"></contact-map>
 					</div>
                 {% endif %}
