--- a/resources/views/Customer/Components/Login.twig
+++ b/resources/views/Customer/Components/Login.twig
@@ -7,7 +7,7 @@
         <form :id="'login-form-' + _uid" class="login-container">
             <div :class="{'modal-body': modalElement}">
                 <div class="row">
-                    <div class="col-xs-12">
+                    <div class="col-12">
                         <div class="input-unit" data-validate="mail">
                             {% set uid_mail = uid() %}
                             <input type="email" name="email" id="{{ uid_mail }}" v-model="username" data-autofocus>
@@ -15,7 +15,7 @@
                         </div>
                         <span class="error-msg">{{ trans("Ceres::Template.loginEnterConfirmEmail") }}</span>
                     </div>
-                    <div class="col-xs-12">
+                    <div class="col-12">
                         <div class="input-unit" :class="{'no-bottom': modalElement}" data-validate="text">
                             {% set uid_pwd = uid() %}
                             <input type="password" name="password" id="{{ uid_pwd }}" v-model="password">
@@ -26,10 +26,10 @@
                 </div>
             </div>
             <div :class="{'modal-footer justify-content-between': modalElement, 'row': !modalElement}">
-                <div :class="{'col-xs-7 col-sm-4': !modalElement}">
+                <div :class="{'col-7 col-sm-4': !modalElement}">
                     <a href="javascript:void(0)" @click="showResetPwdView" class="small">{{ trans("Ceres::Template.loginForgotPassword") }}?</a>
                 </div>
-                <div :class="{'col-xs-5 col-sm-8 text-sm-right': !modalElement}">
+                <div :class="{'col-5 col-sm-8 text-sm-right': !modalElement}">
                     {{ LayoutContainer.show("Ceres::LoginOverlay.ExtendOverlayButtons") }}
                     <button @click.prevent="validateLogin" :disabled="isDisabled" class="btn btn-primary btn-medium" :class="{'btn-right': !modalElement}">
                         <i class="fa fa-user" v-waiting-animation="isDisabled"></i>
