--- a/resources/views/Customer/Components/ResetPasswordForm.twig
+++ b/resources/views/Customer/Components/ResetPasswordForm.twig
@@ -3,7 +3,7 @@
 <script type="x/template" id="vue-reset-password-form">
     <div class="row mb-5">
         <form :id="'reset-password-form-' + _uid" class="mb-3">
-            <div class="col-xs-12 col-sm-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3">
+            <div class="col-12 col-sm-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3">
                 <span class="error-save-pwd-msg">{{ trans("Ceres::Template.resetPwCheckPassword") }}</span>
                 <div class="input-unit" data-validate="password">
                     <popper v-cloak trigger="focus" placement="right" ref="passwordHint">
@@ -23,7 +23,7 @@
                 <span class="error-msg">{{ trans("Ceres::Template.resetPwInvalidPassword") }}</span>
             </div>
 
-            <div class="col-xs-12 col-sm-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3">
+            <div class="col-12 col-sm-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3">
                 <div class="input-unit" data-validate="text">
                     <input type="password" name="password" id="txt_password_second" v-model="passwordSecond">
                     <label for="txt_password_second">{{ trans("Ceres::Template.resetPwRepeatPassword") }}*</label>
@@ -32,7 +32,7 @@
             </div>
         </form>
 
-        <div class="col-xs-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3 mt-3 text-sm-right">
+        <div class="col-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3 mt-3 text-sm-right">
             <button @click="validatePassword" class="btn btn-primary save-new-pwd-btn" :disabled="isDisabled">
                 <i class="fa fa-floppy-o" aria-hidden="true"></i>
                 {{ trans("Ceres::Template.resetPwSave") }}
