--- a/resources/views/Customer/ResetPassword.twig
+++ b/resources/views/Customer/ResetPassword.twig
@@ -10,7 +10,7 @@
 
     <div class="container-max reset-pwd mb-5 mt-3">
         <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3 mb-4">
+            <div class="col-12 col-sm-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3 mb-4">
                 <h1 class="h2">{{ trans("Ceres::Template.resetPwResetPassword") }}</h1>
             </div>
         </div>
