--- a/resources/views/Homepage/DefaultHomepage.twig
+++ b/resources/views/Homepage/DefaultHomepage.twig
@@ -301,7 +301,7 @@
                         </div>
                         <ul class="product-list row grid">
                             {% for item in categoryList1 %}
-                                <li class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
+                                <li class="col-12 col-sm-6 col-md-6 col-lg-3">
                                     {% include "Ceres::Category.Partials.CategoryListItem" with { 'item': item } %}
                                 </li>
                             {% endfor %}
@@ -318,7 +318,7 @@
             {% if category4.details is not empty or homepageContainer7 | trim is not empty or category5.details is not empty or homepageContainer8 | trim is not empty %}
                 <div class="row prop-row my-4 featured-categories">
                     {% if category4.details is not empty or homepageContainer7 | trim is not empty %}
-                        <div class="col-xs-12 col-lg-{% if category5.details is not empty or homepageContainer8 | trim is not empty %}8{% else %}12{% endif %}">
+                        <div class="col-12 col-lg-{% if category5.details is not empty or homepageContainer8 | trim is not empty %}8{% else %}12{% endif %}">
                             <div class="prop-xs-6-4 prop-md-3-1 prop-lg-{% if category5.details is not empty or homepageContainer8 | trim is not empty %}2{% else %}3{% endif %}-1">
                                 {% if homepageContainer7 | trim is empty %}
                                     <div class="prop-inner">
@@ -346,7 +346,7 @@
                     {% endif %}
 
                     {% if category5.details is not empty or homepageContainer8 | trim is not empty %}
-                        <div class="col-xs-12 col-lg-{% if category4.details is not empty or homepageContainer7 | trim is not empty %}4{% else %}12{% endif %}">
+                        <div class="col-12 col-lg-{% if category4.details is not empty or homepageContainer7 | trim is not empty %}4{% else %}12{% endif %}">
                             <div class="prop-xs-6-4 prop-md-3-1 prop-lg-{% if category4.details is not empty or homepageContainer7 | trim is not empty %}1{% else %}3{% endif %}-1">
                                 {% if homepageContainer8 | trim is empty %}
                                     <div class="prop-inner">
@@ -390,7 +390,7 @@
                         <!-- crosssell start -->
                         <ul class="product-list row grid">
                             {% for item in categoryList2 %}
-                                <li class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
+                                <li class="col-12 col-sm-6 col-md-6 col-lg-3">
                                     {% include "Ceres::Category.Partials.CategoryListItem" with { 'item': item } %}
                                 </li>
                             {% endfor %}
