--- a/resources/views/Item/Components/OrderProperties.twig
+++ b/resources/views/Item/Components/OrderProperties.twig
@@ -1,6 +1,6 @@
 <script type="x/template" id="vue-order-properties">
     <div>
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" v-for="(property, index) in properties">
+        <div class="col-12 col-sm-12 col-md-12 col-lg-12" v-for="(property, index) in properties">
             <div v-if="property.property.isOderProperty" class="input-unit order-property-input" :class="{ 'active': property.property.value }" data-validate="text">
                 <input type="text" name="title" :id="'orderPropertyInput' + index" :value="property.property.value" @change="setVariationOrderProperty({propertyId: property.property.id, value: $event.target.value})">
                 <label :for="'orderPropertyInput' + index">${property.property.names.name}
