--- a/resources/views/ItemList/Components/Filter/ItemFilterList.twig
+++ b/resources/views/ItemList/Components/Filter/ItemFilterList.twig
@@ -14,7 +14,7 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-xs-12 text-right">
+                    <div class="col-12 text-right">
                         <button type="button" class="btn btn-primary btn-medium-large" data-toggle="collapse" href="#filterCollapse" aria-controls="filterCollapse" @click="toggleOpeningState()">
                             <i :class="{ 'fa-times': isInitialFacetSelectionActive, 'fa-check': !isInitialFacetSelectionActive }" class="fa" aria-hidden="true"></i>
                             <span v-if="isInitialFacetSelectionActive">{{ trans("Ceres::Template.itemClose") }}&nbsp;</span>
