--- a/resources/views/MyAccount/Components/AccountSettings.twig
+++ b/resources/views/MyAccount/Components/AccountSettings.twig
@@ -33,13 +33,13 @@
                         </div>
                         <div class="modal-body form-horizontal">
                             <div class="row">
-                                <div class="col-xs-12">
+                                <div class="col-12">
                                     <div class="input-unit">
                                         <input type="password" name="new_password" v-model="newPassword" data-autofocus>
                                         <label for="new_password">{{ trans("Ceres::Template.myAccountNewPassword") }}</label>
                                     </div>
                                 </div>
-                                <div class="col-xs-12">
+                                <div class="col-12">
                                     <div class="input-unit no-bottom">
                                         <input type="password" name="confirm_password" v-model="confirmPassword">
                                         <label for="confirm_password">{{ trans("Ceres::Template.myAccountRepeatPassword") }}</label>
