--- a/resources/views/MyAccount/Components/BankDataSelect.twig
+++ b/resources/views/MyAccount/Components/BankDataSelect.twig
@@ -78,25 +78,25 @@
                             <fieldset>
                                 <form id="my-bankForm">
                                     <div class="row">
-                                        <div class="col-xs-12">
+                                        <div class="col-12">
                                             <div class="input-unit accountOwner" data-validate="text">
                                                 <input type="text" name="kontoinhaber" v-model="updateBankData.accountOwner" data-autofocus>
                                                 <label :for="'txt_firma' + _uid">{{ trans("Ceres::Template.myAccountHolder") }}*</label>
                                             </div>
                                         </div>
-                                        <div class="col-xs-12">
+                                        <div class="col-12">
                                             <div class="input-unit">
                                                 <input type="text" name="kreditInstitut" v-model="updateBankData.bankName">
                                                 <label :for="'txt_firma' + _uid">{{ trans("Ceres::Template.myAccountBank") }}</label>
                                             </div>
                                         </div>
-                                        <div class="col-xs-12">
+                                        <div class="col-12">
                                             <div class="input-unit iban" data-validate="regex">
                                                 <input type="text" name="iban" data-validate-ref="/[a-zA-Z]{2}[0-9]{2}[a-zA-Z0-9]{4}[0-9]{7}([a-zA-Z0-9]?){0,16}/" maxlength="32" v-model="updateBankData.iban">
                                                 <label :for="'txt_firma' + _uid">IBAN*</label>
                                             </div>
                                         </div>
-                                        <div class="col-xs-12">
+                                        <div class="col-12">
                                             <div class="input-unit no-bottom" data-validate="regex">
                                                 <input type="text" name="bic" data-validate-ref="/([a-zA-Z]{4}[a-zA-Z]{2}[a-zA-Z0-9]{2}([a-zA-Z0-9]{3})?)/" v-model="updateBankData.bic">
                                                 <label :for="'txt_firma' + _uid">BIC* - {{ trans("Ceres::Template.myAccountBankBicNotification") }}</label>
@@ -108,7 +108,7 @@
                         </div>
                         <div class="modal-footer">
                             <div class="row">
-                                <div class="col-xs-12">
+                                <div class="col-12">
                                     <button type="button" class="btn btn-primary btn-block" @click="validateInput()">{{ trans("Ceres::Template.myAccountSave") }}</button>
                                 </div>
                             </div>
