--- a/resources/views/MyAccount/Components/OrderReturnHistoryItem.twig
+++ b/resources/views/MyAccount/Components/OrderReturnHistoryItem.twig
@@ -9,7 +9,7 @@
             </div>
 
             <div class="row">
-                <div class="col-xs-12 col-md-12">
+                <div class="col-12 col-md-12">
                     <div class="row">
                         <div class="col-md-2">
                             <strong>{{ trans("Ceres::Template.returnHistoryReturnId") }}: </strong>
