--- a/resources/views/Newsletter/NewsletterOptOut.twig
+++ b/resources/views/Newsletter/NewsletterOptOut.twig
@@ -10,7 +10,7 @@
     <form action="/newsletter/unsubscribe" method="POST">
         <div class="container-max page-content">
             <div class="row">
-                <div class="col-xs-12 col-sm-8 col-lg-6 mb-5 content-center">
+                <div class="col-12 col-sm-8 col-lg-6 mb-5 content-center">
                     <h1 class="mb-5 mt-4">{{ trans("Ceres::Template.newsletterOptOutTitle") }}</h1>
 
                     <span>{{ trans("Ceres::Template.newsletterOptOutInfoText") }}</span>
