--- a/resources/views/OrderReturn/OrderReturnConfirmation.twig
+++ b/resources/views/OrderReturn/OrderReturnConfirmation.twig
@@ -9,7 +9,7 @@
 
     <div class="page-content basket order-return container-max mb-5 mt-3">
         <div class="row mb-5">
-            <div class="col-xs-12">
+            <div class="col-12">
                 <h2 class="h1">{{ trans("Ceres::Template.returnConfirmationThanks") }}</h2>
                 <p>{{ trans('Ceres::Template.returnConfirmationInfo') }}</p>
             </div>
@@ -17,13 +17,13 @@
         <hr>
         <div class="row">
             {% set loggedIn = frontend.Account.getIsAccountLoggedIn %}
-            <div class="col-xs-6 col-md-4 {% if loggedIn %}offset-md-2{% else %}offset-3 offset-md-4{% endif %}">
+            <div class="col-6 col-md-4 {% if loggedIn %}offset-md-2{% else %}offset-3 offset-md-4{% endif %}">
                 <a href="{{ homepageURL }}" type="" class="btn btn-primary btn-block bg-primary">{{ trans("Ceres::Template.returnConfirmationHomepage") }}</a>
             </div>
 
 
             {% if loggedIn %}
-                <div class="col-xs-6 col-md-4">
+                <div class="col-6 col-md-4">
                     <a href="{{ urls.myAccount }}" type="" class="btn btn-primary btn-block bg-primary">{{ trans("Ceres::Template.returnConfirmationMyAccount") }}</a>
                 </div>
             {% endif %}
