--- a/resources/views/OrderReturn/OrderReturnView.twig
+++ b/resources/views/OrderReturn/OrderReturnView.twig
@@ -12,7 +12,7 @@
 	<div class="page-content basket order-return container-max mb-5 mt-3">
 
 		<div class="row mt-3">
-            <div class="col-xs-12">
+            <div class="col-12">
                 <h1 class="h2">{{ trans("Ceres::Template.return") }}</h1>
             </div>
         </div>
