--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -23,7 +23,7 @@
         <div class="footer-features py-3 container-max">
             <div class="row">
                 {% for i in 1..numberOfFeatures %}
-                    <div class="col-xs-12 col-sm-4 text-center">
+                    <div class="col-12 col-sm-4 text-center">
                         <i class="fa fa-check text-success" aria-hidden="true"></i>
                         {{ trans('Ceres::Template.footerStoreFeature' ~ i) }}
                     </div>
@@ -35,7 +35,7 @@
 
     <div class="container-max footer-content">
         <div class="row">
-            <div class="col-xs-12">
+            <div class="col-12">
                 <div class="footer-services mt-4">
                     {% set paymentMethodContent = LayoutContainer.show("Ceres::Homepage.PaymentMethods") %}
                     {% if paymentMethodContent|trim is not empty %}
@@ -65,7 +65,7 @@
         <div class="row">
             <hr class="my-4">
             {% for i in 1..numberOfCols %}
-                <div class="col-xs-6 col-sm-3 col-lg-2">
+                <div class="col-6 col-sm-3 col-lg-2">
                     <nav class="footer-column mb-4">
                         <h2 class="h5">{{ trans('Ceres::Template.footerColumnTitle' ~ i) }}</h2>
                         <ul class="list-unstyled">
@@ -90,18 +90,18 @@
                 </div>
             {% endfor %}
             <hr class="d-sm-none my-4">
-            <div class="col-xs-6 col-sm-3">
+            <div class="col-6 col-sm-3">
                 <div class="footer-column">
                     {{ LayoutContainer.show("Ceres::Footer.RowOne") }}
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-3">
+            <div class="col-12 col-sm-3">
                 <div class="footer-column row">
                     {% set rowTwo = LayoutContainer.show("Ceres::Footer.RowTwo") %}
                     
                     {{ rowTwo }}
 
-                    <div class="col-xs-12{% if rowTwo|trim is not empty %} col-sm-6 col-lg-12{% endif %}">
+                    <div class="col-12{% if rowTwo|trim is not empty %} col-sm-6 col-lg-12{% endif %}">
                         {{ LayoutContainer.show("Ceres::Footer.RowThree") }}
                     </div>
                 </div>
