--- a/resources/views/PageDesign/Partials/Header/DefaultHeader.twig
+++ b/resources/views/PageDesign/Partials/Header/DefaultHeader.twig
@@ -108,7 +108,7 @@
                 <div class="container-max">
                     <div class="currency-select-inner row">
 
-                        <div class="currency-list col-xs-12">
+                        <div class="currency-list col-12">
                             <div class="list-title">
                                 <strong>{{ trans("Ceres::Template.headerCurrency") }}</strong>
                                 <hr>
