--- a/resources/views/StaticPages/LegalDisclosure.twig
+++ b/resources/views/StaticPages/LegalDisclosure.twig
@@ -14,7 +14,7 @@
 
     <div class="container-max page-content">
         <div class="row">
-            <div class="col-xs-12">
+            <div class="col-12">
                 {% autoescape false %}
                     <h1>{{ trans("Ceres::Template.legalDisclosure") }}</h1>
                 {% endautoescape %}
