--- a/resources/views/Customer/Components/AddressSelect/AddressSelect.twig
+++ b/resources/views/Customer/Components/AddressSelect/AddressSelect.twig
@@ -166,7 +166,7 @@
                         </div>
 
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-primary btn-medium btn-m-r btn-outline-primary" @click="closeDeleteModal">
+                            <button type="button" class="btn btn-medium btn-m-r btn-outline-primary" @click="closeDeleteModal">
                                 <i class="fa fa-times" aria-hidden="true"></i>
                                 {{ trans("Ceres::Template.addressCancel") }}
                             </button>
