--- a/resources/views/Containers/Components/LastSeenItemList.twig
+++ b/resources/views/Containers/Components/LastSeenItemList.twig
@@ -1,8 +1,10 @@
 <script type="x/template" id="vue-last-seen-item-list">
-    <div v-if="items.length">
+    <div class="row" v-if="items.length">
         <div class="col-12">
             <slot name="heading"></slot>
         </div>
-        <container-item-list :items="items" :items-per-page="itemsPerPage"></container-item-list>
+        <div class="col-12">
+            <container-item-list :items="items" :items-per-page="itemsPerPage"></container-item-list>
+        </div>
     </div>
 </script>
