--- a/resources/views/Widgets/Common/CollapseWidget.twig
+++ b/resources/views/Widgets/Common/CollapseWidget.twig
@@ -1,6 +1,7 @@
 {% import "Ceres::Widgets.Helper.TwigBuilder" as Twig %}
 
 {% set collapseBoxes = widget.settings.collapseBox.mobile %}
+{% set collapseId = uid() %}
 {% set renderContent = false %}
 
 
@@ -12,15 +13,15 @@
       <div class="widget-inner">
         {% for collapseBox in collapseBoxes %}
         <div class="card">
-          <div class="card-header" id="headingOne">
+          <div class="card-header" id="heading_{{ carouselId }}">
             <h5 class="mb-0">
-              <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+              <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse_{{ carouselId }}" aria-expanded="true" aria-controls="collapse_{{ carouselId }}">
                 {{ collapseBox.headline | raw }}
               </button>
             </h5>
           </div>
 
-          <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+          <div id="collapse_{{ carouselId }}" class="collapse show" aria-labelledby="heading_{{ carouselId }}" data-parent="#accordionExample">
             <div class="card-body">
               {{ collapseBox.text | raw }}
             </div>
