--- a/resources/views/Containers/Components/LastSeenItemList.twig
+++ b/resources/views/Containers/Components/LastSeenItemList.twig
@@ -1,8 +1,26 @@
+{{ component( "Ceres::ItemList.Components.CategoryItem") }}
+{{ component( "Ceres::PageDesign.Components.Carousel" ) }}
+
 <script type="x/template" id="vue-last-seen-item-list">
     <div v-if="items.length">
         <div class="col-xs-12">
             <slot name="heading"></slot>
         </div>
-        <container-item-list :items="items" :items-per-page="itemsPerPage"></container-item-list>
+
+        <carousel :items-per-page="itemsPerPage">
+            <category-item
+                slot="items"
+                v-for="item in items"
+                :key="item.id"
+                :item-data="item.data"
+                :decimal-count="{{ ceresConfig.item.storeSpecial }}">
+                <template slot="BeforePrices">
+                    <div v-for="container in getContainerContentById(item.id, 'beforePrices')" v-html="container"></div>
+                </template>
+                <template slot="AfterPrices">
+                    <div v-for="container in getContainerContentById(item.id, 'afterPrices')" v-html="container"></div>
+                </template>
+            </category-item>
+        </carousel>
     </div>
 </script>
