--- a/resources/views/MyAccount/Components/OrderHistory.twig
+++ b/resources/views/MyAccount/Components/OrderHistory.twig
@@ -39,7 +39,7 @@
                     {% for entry in orderList.entries %}
                         <article class="cmp cmp-order-item">
                             <div class="item-details small">
-                                <div class="item-name">
+                                <div class="mb-3">
                                     <h5>{{ trans("Ceres::Template.orderHistoryOrderId") }} {{ entry.order.id }}</h5>
                                 </div>
 
